WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221749
Non unified build fixes for mid February 2021
https://bugs.webkit.org/show_bug.cgi?id=221749
Summary
Non unified build fixes for mid February 2021
Sergio Villar Senin
Reported
2021-02-11 04:05:53 PST
Non unified build fixes for mid February 2021
Attachments
Patch
(8.04 KB, patch)
2021-02-11 04:07 PST
,
Sergio Villar Senin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2021-02-11 04:07:39 PST
Created
attachment 419974
[details]
Patch
youenn fablet
Comment 2
2021-02-11 05:59:48 PST
Comment on
attachment 419974
[details]
Patch Thanks!
EWS
Comment 3
2021-02-11 06:18:35 PST
Committed
r272721
: <
https://commits.webkit.org/r272721
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 419974
[details]
.
Radar WebKit Bug Importer
Comment 4
2021-02-11 06:19:19 PST
<
rdar://problem/74231848
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug