Source/WebCore/bindings/js/WebCoreBuiltinNames.h
@@ -263,6 +263,7 @@ namespace WebCore {
     macro(TextEncoderStream) \
     macro(TextEncoderStreamEncoder) \
     macro(TextTrackCue) \
+    macro(TextTrackCueGeneric) \
     macro(TransformStream) \
     macro(TransformStreamDefaultController) \
     macro(UndoItem) \
